--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
-    <title>Formulario de Acceso</title>    
+    <title>Dashboard Costos</title>    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Videojuegos & Desarrollo">
-    <meta name="description" content="Ejemplo de formulario de acceso basado en HTML5 y CSS">
-    <meta name="keywords" content="login, formulario de acceso html">
+    <meta name="author" content="Antioquiagold lTD">
+    <meta name="description" content="Tableros Costos">
+    <meta name="keywords" content="Dashboards Costos AGD">
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/login.css">
     <style type="text/css">
@@ -46,7 +46,7 @@
             </div>
             <div id="derecho">
                 <div class="titulo">
-                    Mantenimiento Planta <br>
+                    Costos AGD <br>
                     Antioquia Gold LTD.
                 </div>
                 <hr>
