--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Dashboard Costos</title>    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Antioquiagold lTD">
+    <meta name="author" content="Antioquiagold LTD">
     <meta name="description" content="Tableros Costos">
     <meta name="keywords" content="Dashboards Costos AGD">
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> 
